<resources>
    <string name="app_name">News App</string>
    <string name="image_view">Image View</string>
    <string name="text_login">Login</string>
    <string name="text_login_ins">Please Sign In to Continue</string>
    <string name="email">Email</string>
    <string name="text_password">Password</string>
    <string name="text_login_button">LOGIN</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="create_account">Create Account</string>
    <string name="text_ins_signup">Please fill the input below here</string>
    <string name="back">Back</string>
    <string name="fullname">Fullname</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="text_sign_up">SIGN UP</string>
    <string name="sing_in">Sing In</string>
    <string name="text_signin">SIGN IN</string>
    <string name="register">REGISTER</string>
    <string name="text_register">Register</string>
    <string name="date">9 Feb 2021</string>
    <string name="error_text">Not empty</string>
    <string name="error_pass">Password Mismatch</string>
    <string name="text_user">Users</string>
    <string name="error_register">Register Failed</string>
    <string name="highlight">Synopsis Sweet Home, The Threat of Human and Monster Desire</string>
    <string name="maria_sora">Maria Sora</string>
    <string name="all">All</string>
    <string name="international">International</string>
    <string name="media">Media</string>
    <string name="magazine">Magazine</string>
    <string name="business">Business</string>
    <string name="title_items">Coronavirus Update</string>
    <string name="dummy_tgl">21/01/2021</string>
    <string name="floating_button">Floating Button</string>
    <string name="content_desc">Sweet Home is a new Korean series that combines mystery, thriller, and fantasy genres. The series is studded with many stars such as Song Kang, Lee Do-hyun, Lee Jin-wook, and Lee Si-young. Here\'s a synopsis of Sweet Home. Sweet Home is a series that will have a forward and backward plot. This series begins with the depiction of a situation where the world suddenly turns terrible. Humans can turn into monsters because of the passion and ambition within them. Several symptoms are shown before turning into a monster, ranging from severe nosebleeds, wild fiery behavior, hallucinations, loss of consciousness, the color of the eyeballs turning black, and finally turning into a monster and threatening human life.</string>
    <string name="email_profile">mariasora@gmail.com</string>
    <string name="preference">Preference</string>
    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="change_account">Change Account</string>
    <string name="edit_account">Edit Account</string>
    <string name="notification">Notification</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="bookmark">Bookmark</string>
    <string name="setting">Setting</string>
    <string name="privacy_and_setting">Privacy and Setting</string>
    <string name="logout">Logout</string>
    <string name="breaking_news">Breaking News</string>
</resources>