<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/iv_profile_main"
            android:layout_width="@dimen/_50dp"
            android:layout_height="@dimen/_50dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:src="@drawable/foto_dummy_pro"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/date"
            app:layout_constraintBottom_toBottomOf="@+id/iv_profile_main"
            app:layout_constraintStart_toEndOf="@+id/iv_profile_main"
            app:layout_constraintTop_toTopOf="@+id/iv_profile_main" />

        <ImageButton
            android:id="@+id/ib_profile_main"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:background="@color/white"
            android:contentDescription="@string/image_view"
            app:layout_constraintBottom_toBottomOf="@+id/tv_date_main"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/tv_date_main"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0"
            app:srcCompat="@drawable/ic_person" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_main"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_260dp"
            android:layout_marginStart="@dimen/_16dp"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_marginEnd="16dp"
            android:elevation="@dimen/_16dp"
            app:cardCornerRadius="@dimen/_20dp"
            app:cardElevation="@dimen/_16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title_label">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white">

                <androidx.cardview.widget.CardView
                    android:id="@+id/card_image"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_160dp"
                    app:cardCornerRadius="@dimen/_16dp"
                    app:cardElevation="@dimen/_20dp">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/white"
                        android:contentDescription="@string/image_view"
                        android:scaleType="centerCrop"
                        android:src="@drawable/sweet_home" />

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/tv_highlight"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/card_image"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginLeft="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:text="@string/highlight"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sp"
                    android:textStyle="bold" />

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/iv_author_main"
                    android:layout_width="@dimen/_30dp"
                    android:layout_height="@dimen/_30dp"
                    android:layout_below="@id/tv_highlight"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_8dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:src="@drawable/foto_dummy_pro" />

                <TextView
                    android:id="@+id/tv_name_author"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_highlight"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_toEndOf="@id/iv_author_main"
                    android:text="@string/maria_sora" />

                <TextView
                    android:id="@+id/tv_date_highlight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_highlight"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:text="@string/date" />


            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/tv_title_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:text="@string/breaking_news"
            android:textColor="@color/black"
            android:textSize="@dimen/_30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_date_main" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/card_main"
            android:id="@+id/hs_topic">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/all"
                    android:id="@+id/tv_all"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:textSize="@dimen/_18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/international"
                    android:id="@+id/tv_international"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_all"
                    android:textSize="@dimen/_18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/media"
                    android:id="@+id/tv_media"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_international"
                    android:textSize="@dimen/_18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/magazine"
                    android:id="@+id/tv_magazine"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_media"
                    android:textSize="@dimen/_18sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/business"
                    android:id="@+id/tv_business"
                    android:layout_marginStart="@dimen/_16dp"
                    android:layout_marginEnd="@dimen/_16dp"
                    android:layout_marginTop="@dimen/_16dp"
                    android:layout_marginBottom="@dimen/_8dp"
                    android:layout_toEndOf="@id/tv_magazine"
                    android:textSize="@dimen/_18sp"/>
            </RelativeLayout>
        </HorizontalScrollView>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_main"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_20dp"
            android:layout_marginEnd="@dimen/_16dp"
            android:layout_marginStart="@dimen/_8dp"
            app:layout_constraintTop_toBottomOf="@id/hs_topic"
            tools:layout_editor_absoluteX="16dp"
            tools:listitem="@layout/news_item" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>